[metadata]
name = metareserve-GENI
version = 0.1.0
author = Sebastiaan Alvarez Rodriguez
author_email = a@b.c
description = GENI Plugin for metareserve reservation system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sebastiaan-Alvarez-Rodriguez/metareserve-geni
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = metareserve-GENI
packages = find:
python_requires = >=3.2
install_requires =
    metareserve>=0.1.1

[options.packages.find]
where = metareserve-GENI
